<resources>
    <string name="app_name">汽车配件仓库管理</string>
    <string name="action_settings">Settings</string>


    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="passwd">密码:</string>
    <string name="number">职工号:</string>
    <string name="phone">手机号:</string>
    <string name="surepasswd">确认密码:</string>
    <string name="name">用户名:</string>
    <string name="nametips">请输入用户名/手机号</string>
    <string name="passedtips">请输入密码</string>

    <string name="repairshopname">汽修厂名称:</string>
    <string name="shoparea">汽修厂区域:</string>
    <string name="shopaddress">汽修厂地址:</string>
    <string name="addressscope">所属区域:</string>
    <string name="repairscope">经营类型:</string>

    <string name="infomation">infomation</string>
</resources>
